# personal_reflection_agent

./: .env  .gitignore  README.md  app.py  gradio_app.py  main.py  pyproject.toml  requirements.txt
source/agent/: agent.py
source/graph/: reflection_graph.py
source/nodes/: fallback_node.py  reflection_node.py
source/state/: reflection_state.py
source/utils/: logger.py  prompt.py
